<resources>
    <string name="app_name">Project1GroupStudyAppNew</string>

    <string name="facebook_app_id">1499034434430019</string>
    <string name="facebook_client_token">c1b1ee1ed81ec0933b13796701a61fb1</string>

    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_delete"><font color='#FF0000'>Delete member</font></string>
    <string name="str_delete_file"><font color='#FF0000'>Delete file</font></string>
    <string name="str_cancel">Cancel</string>
    <string name="enter_message">Enter message ...</string>
    <string name="add_file">Add File</string>
    <string name="file">File</string>
    <string name="other">Other</string>
    <string name="image">Image</string>
    <string name="reminders">Reminders</string>
    <string name="assignee">Assignee:\ </string>
    <string name="none_reminder">No Reminder</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="change_password_success">Change password success</string>
    <string name="progress_chart">Progress chart</string>
    <string name="members_chart">Members chart</string>
    <string name="str_done">Done</string>
    <string name="attach">Attach File</string>
    <string name="start">Start</string>
    <string name="attached_file">Attached File</string>
    <string name="deadline">Deadline:\ </string>
    <string name="add_task">Add Task</string>
    <string name="uploader">Uploader:\ </string>
    <string name="capacity">Capacity:\ </string>
    <string name="group2">Group:\ </string>
    <string name="none">None</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="review">Review</string>
    <string name="done">Done</string>
    <string name="creator">Creator:\ </string>
    <string name="taker">Taker:\ </string>
    <string name="in_progress">In Progress</string>
    <string name="to_do">To-do</string>
    <string name="canceled">Canceled</string>
    <string name="overdue">Overdue</string>
    <string name="slogan">Collaborate. Plan. Succeed.</string>
    <string name="group">My Groups</string>
    <string name="group3">Group</string>
    <string name="task">Task</string>
    <string name="people">People</string>
    <string name="view_more">View more</string>
    <string name="modify">Modify</string>
    <string name="invite_people">Invite people to join the group using QR code or link or enter the group ID below:</string>
    <string name="enter_user_name_or_id">Enter user name or ID</string>
    <string name="pwd_does_not_match">Password does not match!</string>
    <string name="profile">Profile</string>
    <string name="theme">Theme</string>
    <string name="system_font">System Font</string>
    <string name="language">Language</string>
    <string name="complete">Complete</string>
    <string name="enter_new_pwd">Enter new password</string>
    <string name="log_in">log in</string>
    <string name="had_an_account">Had an account,\ </string>
    <string name="or_register_with">or register with</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="project_group">Project group</string>
    <string name="study_group">Study group</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="all">All</string>
    <string name="act_chart">Activity chart</string>
    <string name="recent_task">Recent tasks:</string>
    <string name="completed_task">Completed tasks:\ </string>
    <string name="participating_groups">Participating groups:\ </string>
    <string name="act_info">Activity information</string>
    <string name="please_enter_email">Please enter email!</string>
    <string name="email_is_incorrect_format">Email is incorrect format!</string>
    <string name="please_enter_password">Please enter password!</string>
    <string name="password_does_not_match">Password does not match!</string>
    <string name="password_is_too_short">Password must be at least 6 characters long!</string>
    <string name="user_name_is_too_short">User name must be at least 6 characters long!</string>
    <string name="now">\ now!</string>
    <string name="register">register</string>
    <string name="no_account">Don\'t have an account,\ </string>
    <string name="or_log_in_with">or log in with</string>
    <string name="enter_password">Enter password</string>
    <string name="Log_in">Log in</string>
    <string name="calendar">Calendar</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="add2">Add\ +</string>
    <string name="enter_description">Enter description</string>
    <string name="description">Description: </string>
    <string name="enter_group_name">Enter group name</string>
    <string name="enter_group_id">Enter group ID</string>
    <string name="group_name">Group name:</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="user_name">User name</string>
    <string name="member">\ member</string>
    <string name="members">\ members</string>
    <string name="members2">Members</string>
    <string name="Project">Project</string>
    <string name="Study">Study</string>
    <string name="groups">Groups</string>
    <string name="resend_in">Resend in </string>
    <string name="auto">Auto</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="otp_is_incorrect">OTP is incorrect!</string>
    <string name="confirm">Confirm</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="verify_otp">Verify OTP:</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_email">Enter email</string>
    <string name="forgot_pw">Forgot password?</string>
    <string name="reset_pw">Reset password</string>
    <string name="please_check_your_email">Please check your email to reset password!</string>
    <string name="back">Return</string>
    <string name="reminder">Reminders</string>
    <string name="please_enter_username">Please enter username!</string>
    <string name="create">Create</string>
    <string name="add_group">Add group</string>
    <string name="join_group">Join group</string>
    <string name="enter_group_description">Enter description</string>
    <string name="study">Study</string>
    <string name="project">Project</string>
    <string name="group_name_is_too_long">Group name is too long!</string>
    <string name="group_description_is_too_long">Group description is too long!</string>
    <string name="user_description_is_too_long">User description is too long!</string>
    <string name="task_study">Lesson</string>
    <string name="task_project">Task</string>
    <string name="chat">Chat</string>
    <string name="progress">Progress</string>
    <string name="document">Document</string>
    <string name="leave_group_success">You leaved group successfully!</string>
    <string name="authorize_admin">Authorize admin</string>
    <string name="authorize_success">Authorize success</string>
    <string name="deleted_member">Deleted member</string>
    <string name="unauthorize_admin">Unauthorize admin</string>
    <string name="owner">Owner</string>
    <string name="admin">Admin</string>
    <string name="leave_group">Leave group</string>
    <string name="video">Video</string>
    <string name="image_gallery">Image gallery</string>
    <string name="take_photos_or_videos">Take photos or videos</string>
    <string name="select_file">Select file</string>
    <string name="pdf">PDF</string>
    <string name="upload_success">Upload success</string>
    <string name="download_success">Download success</string>
    <string name="take_photo">Take photo</string>
    <string name="take_video">Take video</string>
    <string name="rename">Rename</string>
    <string name="rename_file_success">Rename file success</string>
    <string name="delete_file_success">Delete file success</string>
    <string name="share_file_success">Share file success</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="can_not_preview_this_file">Can\'t preview this file!</string>
    <string name="completion">Completion %</string>
    <string name="title">Title:\ </string>
    <string name="enter_task_name">Enter task name</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="after_beginning">after beginning</string>
    <string name="option">Option</string>
    <string name="select_amount_of_time">Select amount of time</string>
    <string name="select_day_hour">Select day/hour</string>
    <string name="select_day">Select day</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="format">day %02d month %02d, %d</string>
    <string name="choose_a_member">Choose a member</string>
    <string name="please_enter_amount_of_time">Please enter amount of time!</string>
    <string name="please_select_time_again">Please select time again!</string>
    <string name="please_select_assignee">Please select assignee!</string>
    <string name="all_day">All day</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task"><font color='#FF0000'>Delete task</font></string>
    <string name="cancel_task"><font color='#FF0000'>Cancel task</font></string>
    <string name="accept">Accept</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="remove_file">Remove file</string>

</resources>