<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_rename_file"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@drawable/bg_addgroup">

    <TextView
        android:text="@string/rename"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?attr/colorText2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtFileName"
        android:hint="@string/enter_file_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textStyle="bold"
        android:textColorHint="@color/gray"
        app:endIconMode="clear_text"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:background="@drawable/bg_stroke_lightgray"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/checkFileName"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_marginTop="20dp"
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_weight="0.5"
            android:text="@string/str_cancel"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="?attr/colorText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <View
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/light"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txtDone"
            android:layout_weight="0.5"
            android:text="@string/done"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorText2"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>